--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
  <!DOCTYPE html>
 <html>
+<head>
+  <title>My Page Title</title>
+  <link rel="icon" type="image/png" href="LogoLight250x250.png">
+</head>
 <body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+<h1>This page is under construction.</h1>
 
 </body>
 </html>
