--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
  <!DOCTYPE html>
 <html>
 <head>
-  <title>My Page Title</title>
+  <title>neroshop</title>
   <link rel="icon" type="image/png" href="LogoLight250x250.png">
 </head>
 <body>
