--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
 
 
-    <link rel="icon" type="image/png" href="assets/images/fav.png"/>
+    <link rel="icon" type="image/png" href="assets/images/favicon.png"/>
 
 
     <meta charset="utf-8">
@@ -13,7 +13,7 @@
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,500,700,900" rel="stylesheet">
 
-    <title>NEROSHOP</title>
+    <title>neroshop</title>
 
 
     <!-- Additional CSS Files -->
