--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="author" content="The neroshop team">
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,500,700,900" rel="stylesheet">
 
-    <title>Neroshop - </title>
+    <title>Neroshop - P2P marketplace for Monero users</title>
 
 
     <!-- Additional CSS Files -->
