--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NeroShop</title>
+    <title>Neroshop</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap"rel="stylesheet"/>
@@ -58,9 +58,9 @@
       </nav>
 <section class="hero">
 <div class="">
-  <h1>We are a Decentralized Peer-to-peer Marketplace</h1>
+  <h1>The First Decentralized Privacy-centric Marketplace</h1>
   <p>Neroshop is a user-friendly and censorship-resistant distributed P2P marketplace for Monero users.</p>
-  <h2>What makes us different</h2>
+  <h2>What makes neroshop different</h2>
   <ol>
     <li>There are no fees or restrictions.</li>
     <li>All data is private and secure.</li>
