--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Neroshop - Decentralized P2P marketplace for Monero users</title>
-  <link rel="icon" type="image/png" href="LogoLight250x250.png">
+  <link rel="icon" type="image/png" href="favicon.png">
 </head>
 <body>
 
